added: streams 100%