@@ -7,9 +7,9 @@ import java.util.Optional;
 
 public class MinMaxCount {
     public static void main(String[] args) {
-        List<Integer> list = List.of(1, 2, 3, 4, 10);
-        Optional<Integer> min = list.stream().min((a, b) -> a - b);
-        Optional<Integer> max = list.stream().max((a, b) -> a - b);
+        List<Integer> list = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 6));
+        Optional<Integer> min = list.stream().min(Integer::compare);
+        Optional<Integer> max = list.stream().max(Integer::compare);
 
         long count = list.stream().count();
 
